Updated category further

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <h3 class="project-title">Casale Pasta</h3>
           <hr>
           <p class="student-info"><span class="student-info-title">Student:</span> Megan Adams</p>
-          <p class="student-info"><span class="student-info-title">Category:</span> Integrated campaign</p>
+          <p class="student-info"><span class="student-info-title">Category:</span> Graphic Design | Integrated campaign</p>
           <p class="student-info"><span class="student-info-title">Level:</span> Senior</p>
         </div>
       </div>
